fix: fix scrollbar/overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ small {
 }
 
 #hero-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   display: flex;
